# openKB

./: README.md  db.sqlite3  manage.py  pyproject.toml  txt.html
kb/: admin.py  apps.py  context_processors.py  deps.py  forms.py  models.py  signals.py  urls.py  views.py
kb/management/commands/: init_settings.py
kb/migrations/: 0001_initial.py  0002_alter_article_permalink.py  0002_article_permalink.py  0002_rename_body_article_content_article_published.py  0003_alter_article_permalink.py  0003_article_seo_description_article_seo_title.py  0004_settings.py  0005_articlesettings_displaysettings_stylesettings.py  0006_article_featured.py  0007_rename_settings_websitesettings_and_more.py  0008_alter_stylesettings_button_background_color_and_more.py
openKB/: asgi.py  settings.py  urls.py  wsgi.py
static/assets/css/: styles.css
templates/: article_detail.html  base.html  file.html  footer.html  import.html  index.html  login.html  messages.html  nav.html  suggest.html
templates/admin/: base_settings.html  settings.html
templates/articles/: add_article.html  article_detail.html  article_list.html  confirm_delete.html  edit_article.html
templates/settings/: article_settings.html  base_settings.html  display_settings.html  settings.html  style_settings.html  website_settings.html
templates/users/: admin_setup.html  edit_user.html  edit_users.html  my_account.html  new_user.html
